<resources>
    <string name="app_name">NeoViewer</string>
    <string name="neo_name_label">Name:</string>
    <string name="neo_jpl_label">JPL Url:</string>
    <string name="neo_designation_label">Designation:</string>
    <string name="neo_hazardous_label">Hazardous:</string>
    <string name="neo_diameter_min_label">Min:</string>
    <string name="neo_diameter_max_label">Max:</string>
    <string name="kilometers_label">Kilometers</string>
    <string name="meters_label">Meters</string>
    <string name="miles_label">Miles</string>
    <string name="feet_label">Feet</string>
    <string name="diameter_label">Estimated Diameter</string>
    <string name="error_label">Network Error!</string>
    <string name="no_exception">No exception message</string>
    <string name="retry">Retry</string>
    <string name="network_error_toast">A network error occurred!</string>
    <string name="network_error_message">A network error occurred please retry.</string>
    <string name="refresh">Refresh</string>
    <string name="copy_toast">Copied Url</string>
    <string name="sort_by_date">Sort By Date</string>
    <string name="Select_date_range">Select date range</string>
    <string name="date_range_too_long_toast">Date range can\'t be more than one week!</string>
    <string name="no_feed_data">Sorry! No data found for these days.</string>
    <string name="date">DATE : </string>
    <string name="neo_content_description">near earth object click to expand</string>
    <string name="copy_jpl_url">copy jpl url</string>
</resources>