<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/neo_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name_label"
            app:layout_constraintTop_toTopOf="@+id/name_label"
            tools:text="name" />

        <TextView
            android:id="@+id/neo_jpl_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@+id/jpl_url_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/jpl_url_label"
            app:layout_constraintTop_toTopOf="@+id/jpl_url_label"
            app:layout_constraintVertical_bias="0.0"
            tools:text="http://ssd.jpl.nasa.gov/sbdb.cgi?sstr=2000433" />

        <TextView
            android:id="@+id/neo_hazardous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/neo_designation"
            tools:text="hazardous" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/neo_name_label"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jpl_url_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/neo_jpl_label"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="@+id/name_label"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <TextView
            android:id="@+id/designation_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/neo_designation_label"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/jpl_url_label"
            app:layout_constraintTop_toBottomOf="@+id/jpl_url_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/neo_designation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/designation_label"
            app:layout_constraintStart_toEndOf="@+id/designation_label"
            app:layout_constraintTop_toTopOf="@+id/designation_label"
            tools:text="designation" />

        <TextView
            android:id="@+id/hazardous_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/neo_hazardous_label"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@+id/neo_hazardous"
            app:layout_constraintEnd_toStartOf="@+id/neo_hazardous"
            app:layout_constraintTop_toTopOf="@+id/neo_hazardous" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/designation_label"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardview_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/neo_kilometers_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/kilometers_min_label"
                    app:layout_constraintStart_toEndOf="@+id/kilometers_min_label"
                    app:layout_constraintTop_toTopOf="@+id/kilometers_min_label"
                    tools:text="kilometers min"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/kilometers_min_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/neo_diameter_min_label"
                    android:textAlignment="textEnd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/neo_kilometers_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="@+id/neo_kilometers_min"
                    app:layout_constraintTop_toBottomOf="@+id/neo_kilometers_min"
                    tools:text="kilometers max"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/neo_meters_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/neo_kilometers_max"
                    app:layout_constraintTop_toBottomOf="@+id/neo_kilometers_max"
                    tools:text="meters min"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/neo_meters_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/neo_meters_min"
                    app:layout_constraintTop_toBottomOf="@+id/neo_meters_min"
                    tools:text="meters max"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/neo_miles_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="miles min"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/neo_miles_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="@+id/neo_miles_min"
                    app:layout_constraintTop_toBottomOf="@+id/neo_miles_min"
                    tools:text="miles max"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/neo_feet_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/neo_miles_max"
                    app:layout_constraintTop_toBottomOf="@+id/neo_miles_max"
                    tools:text="feet min"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/neo_feet_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="@+id/neo_feet_min"
                    app:layout_constraintTop_toBottomOf="@+id/neo_feet_min"
                    tools:text="feet max"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
